Update Open River Analysis.ipynb

--- a/pools_specific_EDA/Open River/Open River Analysis.ipynb
+++ b/pools_specific_EDA/Open River/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "characteristic-cornwall",
+   "id": "worse-israeli",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "adjacent-microwave",
+   "execution_count": 196,
+   "id": "boring-decade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,10 @@
     "import numpy as np\n",
     "from geopy import distance\n",
     "import time\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import RobustScaler,StandardScaler\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "# useful functions and classes\n",
@@ -249,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-skating",
+   "id": "foreign-lesbian",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -258,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "distributed-atlas",
+   "id": "unlike-routine",
    "metadata": {
     "scrolled": true
    },
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patient-discrimination",
+   "id": "expired-oklahoma",
    "metadata": {},
    "source": [
     "Checking negative values"
@@ -346,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "julian-throat",
+   "id": "negative-shakespeare",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polyphonic-apollo",
+   "id": "corresponding-supply",
    "metadata": {},
    "source": [
     "Checking for weird location codes"
@@ -386,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "sudden-dallas",
+   "id": "acknowledged-poland",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imported-antibody",
+   "id": "optional-saturday",
    "metadata": {},
    "source": [
     "Insanity check for time seasons"
@@ -417,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "streaming-remainder",
+   "id": "viral-hampshire",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informative-august",
+   "id": "advised-oriental",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -446,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "twenty-chaos",
+   "id": "fatal-damage",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "concrete-solid",
+   "id": "reserved-singing",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "soviet-private",
+   "id": "silver-oakland",
    "metadata": {
     "scrolled": true
    },
@@ -862,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "standing-tuesday",
+   "id": "expensive-worker",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reverse-oklahoma",
+   "id": "descending-yesterday",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -891,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "auburn-involvement",
+   "id": "promotional-spyware",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mobile-furniture",
+   "id": "electronic-belief",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -1097,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "internal-ebony",
+   "id": "amino-turkey",
    "metadata": {
     "scrolled": true
    },
@@ -1126,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "corresponding-music",
+   "id": "conservative-laptop",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coordinated-queensland",
+   "id": "homeless-integration",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -1168,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "altered-theorem",
+   "id": "elegant-minnesota",
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subject-archive",
+   "id": "distinct-roberts",
    "metadata": {},
    "source": [
     "How much data is TDA ready?"
@@ -1208,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "proof-ranch",
+   "id": "bacterial-continuity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "dietary-armenia",
+   "id": "leading-fever",
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "olive-batman",
+   "id": "wired-constitutional",
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-cartridge",
+   "id": "owned-substance",
    "metadata": {},
    "source": [
     "#### Interpolating missing data"
@@ -1281,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "enclosed-march",
+   "id": "guilty-auckland",
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funky-collect",
+   "id": "fallen-requirement",
    "metadata": {},
    "source": [
     "Save the interpolated dataset"
@@ -1746,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "accomplished-balloon",
+   "id": "constitutional-invalid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1755,7 +1759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-ballet",
+   "id": "reverse-tenant",
    "metadata": {},
    "source": [
     "Now see how many rows we gained after interpolation, and dropping VEL as a variable"
@@ -1764,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "recovered-birth",
+   "id": "completed-actor",
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enhanced-green",
+   "id": "satellite-layer",
    "metadata": {},
    "source": [
     "Checking how good we did with prediction, first we need to filter the data based off values we already have"
@@ -1796,7 +1800,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "competent-prophet",
+   "id": "incorporate-hudson",
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "major-logistics",
+   "id": "quality-compensation",
    "metadata": {},
    "outputs": [
     {
@@ -2211,7 +2215,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "convinced-insurance",
+   "id": "neither-champion",
    "metadata": {},
    "outputs": [
     {
@@ -2321,9 +2325,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "juvenile-scroll",
+   "metadata": {},
+   "source": [
+    "### Multivariate Regression Attempt on Open River"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "expanded-district",
+   "metadata": {},
+   "source": [
+    "Filter for non missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "superior-needle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtering out all rows with missing data\n",
+      "(1943, 21)\n",
+      "Filtering out colums that we dont need\n",
+      "(1943, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols = ['TP','TN','CHLcal','SS','VEL','DO','COND','WDP','TURB','TEMP','SECCHI']\n",
+    "print(\"Filtering out all rows with missing data\")\n",
+    "qualdata = water_data.dropna(axis=0, how='any', thresh=None, subset=cols, inplace=False).copy()\n",
+    "print(qualdata.shape)\n",
+    "print(\"Filtering out colums that we dont need\")\n",
+    "qualdata.drop(qualdata.columns.difference(cols), 1, inplace=True)\n",
+    "print(qualdata.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "loose-synthesis",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TP training set mean squared error: 0.000000  on average off 0.000000\n",
+      "TN training set mean squared error: 0.000000  on average off 0.000000 \n",
+      "\n",
+      "TP test set mean squared error: 153.344687  on average off 12.383242\n",
+      "TN test set mean squared error: 41933.312604  on average off 204.776250 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model Hyperparameter: Set the degree of the polynomial to fit\n",
+    "d = 5\n",
+    "\n",
+    "\n",
+    "X = np.array(qualdata[['CHLcal','SS','VEL','DO','COND','WDP','TURB','TEMP','SECCHI']])\n",
+    "TP = np.array(qualdata['TP'])\n",
+    "TN = np.array(qualdata['TN'])\n",
+    "\n",
+    "# Good idea to standardize predictor attributes - assumes each variable has a decently normal distribution\n",
+    "scaler = RobustScaler().fit(X)\n",
+    "X_standard = scaler.transform(X)\n",
+    "\n",
+    "\n",
+    "# The PolynomialFeatures class in sklearn.preprocessing can be used to transform a data matrix by\n",
+    "# adding higher-order and interaction terms for the existing features. It also adds a \"zeroth\"\n",
+    "# column consisting of all 1's that corresponds to the weight w_0 in a regression model.\n",
+    "poly = PolynomialFeatures(d)\n",
+    "\n",
+    "# We \"fit\" the poly object to our data matrix to allow it to identify the structure of the data\n",
+    "# (notably the number of attributes, or columns, in the data matrix).\n",
+    "poly.fit(X_standard)\n",
+    "#poly.fit(X)\n",
+    "\n",
+    "\n",
+    "# Now we use poly.transform to add any higher-order terms to the data matrix.\n",
+    "# This also adds a zeroth attribute which is set to all 1's.\n",
+    "augmented_X = poly.transform(X_standard)\n",
+    "#augmented_X = poly.transform(X)\n",
+    "\n",
+    "\n",
+    "# Next we create a linear regression object (named lm for \"linear model\").\n",
+    "# Because our augmented data matrix includes an all 1's column, we don't\n",
+    "# need to fit the intercept (w_0) here.\n",
+    "TP_lm = LinearRegression(fit_intercept=False)\n",
+    "TN_lm = LinearRegression(fit_intercept=False)\n",
+    "\n",
+    "\n",
+    "# Split data into train and test for each\n",
+    "TPX_train, TPX_test, TPy_train, TPy_test = train_test_split(augmented_X, TP, train_size=0.7)\n",
+    "TNX_train, TNX_test, TNy_train, TNy_test = train_test_split(augmented_X, TN, train_size=0.7)\n",
+    "\n",
+    "# Fit models using training data\n",
+    "TP_lm.fit(TPX_train, TPy_train)\n",
+    "TN_lm.fit(TNX_train, TNy_train)\n",
+    "\n",
+    "# After fitting the regression model, we can estimate the error\n",
+    "# Get training errors\n",
+    "TP_train_err = np.mean((TPy_train - TP_lm.predict(TPX_train)) ** 2)\n",
+    "TN_train_err = np.mean((TNy_train - TN_lm.predict(TNX_train)) ** 2)\n",
+    "\n",
+    "# Get test errors\n",
+    "TP_test_err = np.mean((TPy_test - TP_lm.predict(TPX_test)) ** 2)\n",
+    "TN_test_err = np.mean((TNy_test - TN_lm.predict(TNX_test)) ** 2)\n",
+    "\n",
+    "# Report\n",
+    "print(\"TP training set mean squared error: {:.6f}\".format(TP_train_err),\" on average off {:.6f}\".format(np.sqrt(TP_train_err)))\n",
+    "print(\"TN training set mean squared error: {:.6f}\".format(TN_train_err),\" on average off {:.6f}\".format(np.sqrt(TN_train_err)),\"\\n\")\n",
+    "print(\"TP test set mean squared error: {:.6f}\".format(TP_test_err),\" on average off {:.6f}\".format(np.sqrt(TP_test_err)))\n",
+    "print(\"TN test set mean squared error: {:.6f}\".format(TN_test_err),\" on average off {:.6f}\".format(np.sqrt(TN_test_err)),\"\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "established-snake",
+   "id": "focused-ontario",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "paperback-convertible",
    "metadata": {},
    "outputs": [],
    "source": []
