--- a/pools_specific_EDA/fixed and random sampling.Rmd
+++ b/pools_specific_EDA/fixed and random sampling.Rmd
@@ -9,22 +9,19 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Summary
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+The LTRM water quality data is created from fixed and random sampling sites. The fixed sampling sites are different because
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+a) They are fixed... so the same location is sampled multiple times throughout the year
 
-```{r cars}
-summary(cars)
+b) The fixed sampling sites are not in the main channel.
+
+Using the data from the fixed sampling sites may not even be relevant to our TDA analysis. Being able to identify the fixed site samples is thus important.
+
+However, identifying which samples are from fixed sites is not straightforward. Location code `LOCATCD` is not readily decipherable because there are formats that 
+
+```{r}
+
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
