--- a/DataCleaning/qf codes filtering.Rmd
+++ b/DataCleaning/qf codes filtering.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Filtering water quality dataset"
+title: "Filter QF codes"
 author: "Amber Lee"
 date: "6/15/2021"
 output: pdf_document
